# zabbix_automation

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  setup.py
cli/: groups.py  hosts.py  main.py  triggers.py
docs/: README.md
examples/: api_connect.py
modules/: groups.py  hosts.py  templates.py  web.py
tests/: conftest.py  test_api.py  test_basic.py  test_hosts.py  test_integration.py  test_utils.py  test_web.py
zabbix-automator/cli/: items.py  main.py  templates.py  web.py
zabbix-automator/docs/: README.md  api.md
zabbix-automator/examples/: api_connect.py  check_web.py  create_web_host.py
zabbix-automator/modules/: groups.py  items.py  triggers.py  web.py
zabbix_automator/: utils.py
zabbix_automator/cli/: groups.py  hosts.py  items.py  main.py  templates.py  triggers.py  web.py
zabbix_automator/docs/: README.md  api.md
zabbix_automator/modules/: hosts.py  templates.py
