[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zabbix_automation"
version = "0.1.0"
description = "Zabbix Automation CLI and Modules"
authors = [
  { name = "Ahmed Elkomey", email = "someone@example.com" }
]
keywords = ["zabbix", "automation"]

# For license, you can do this:
license = { text = "MIT" }

dependencies = [
  "zabbix-utils",
  "pyyaml",
]

[project.scripts]
zabbix-cli = "cli.main:main"
