[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zabbix-automator"
version = "0.1.2"
description = "Zabbix Automation CLI and Modules"
authors = [
  { name = "Ahmed Elkomey", email = "ahmedelkomey961@gmail.com" }
]
keywords = ["zabbix", "automation"]
license = { text = "MIT" }

dependencies = [
  "zabbix-utils",
  "pyyaml",
]

# If you want to include additional files, declare them here or via MANIFEST.in
# [tool.setuptools]
# include-package-data = true

[project.scripts]
zabbix-cli = "zabbix_automator.cli.main:main"